replaced phantom with zombiejs

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "main": "index.js",
   "scripts": {
-    "start":  "gulp run",
+    "start": "gulp run",
     "launch": "gulp launch",
-    "test":   "gulp test",
-    "lint":   "gulp lint",
-    "clean":  "gulp clean"
+    "test": "gulp test",
+    "lint": "gulp lint",
+    "clean": "gulp clean"
   },
   "repository": {
     "type": "git",
@@ -53,9 +53,9 @@
     "less": "^2.5.0",
     "mithrilify": "0.0.3",
     "mocha": "^2.2.4",
-    "phantom": "^0.7.2",
     "sinon": "^1.14.1",
     "skeleton-less": "^2.0.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "zombie": "^4.0.10"
   }
 }
